# splitbench

./: README.md  main.py  mise.toml  pyproject.toml
src/: multi-node-fio.yaml  multi-node-fio2.yaml  parse_results.py  script
src/splitbench/: __init__.py  cli.py
src/splitbrain_diskspd_k8s/: __init__.py  cli.py
src/splitbrain_diskspd_k8s/templates/: multi-node.yaml  single-node.yaml
