[project]
name = "splitbench"
version = "0.1.0"
description = "A CLI tool to run DiskSPD benchmarks on Kubernetes clusters"
readme = "README.md"
authors = [
  { name = "Mischa van den Burg", email = "mischavandenburg@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.15.3",
]

[project.scripts]
splitbench = "splitbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
